[project]
name = "pam-simulation"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Branislav Trstenský", email = "bt7s7k7@hotmail.sk" }
]
dependencies = [
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pam_simulation"]
